--- a/boot/grub/grub.cfg
+++ b/boot/grub/grub.cfg
@@ -2,6 +2,6 @@ set timeout=15
 set default=0 # Set the default menu entry
 
 menuentry "CyxOS v4" {
-   kernel /boot/kernel.bin
+   multiboot2 /boot/kernel.bin
    boot
 }
