--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -2,6 +2,7 @@ set timeout=15
 set default=0 # Set the default menu entry
 
 menuentry "CyxOS v4" {
-   multiboot2 /boot/kernel.bin
+   multiboot /boot/loader.bin
+   module /boot/kernel.bin
    boot
 }
